--- a/public/css/school-style.css
+++ b/public/css/school-style.css
@@ -1,4 +1,3 @@
-/* Logo */
 .school-logo-area {
     display: flex;
     align-items: center;
@@ -11,7 +10,6 @@
     margin-right: 20px
 }
 
-/* Slideshow */
 .slideshow {
     position: relative;
     width: 100%;
@@ -54,9 +52,6 @@
     100% { opacity: 1;}
 }
 
-/*
-
-*/
 main section {
     margin-top: 50px;
     margin-bottom: 50px;
@@ -104,7 +99,6 @@ nav {
     color: #aaa;
 }
 
-/* Add comment */
 .add-comment a.btn {
     display: flex;
     align-items: flex;
@@ -127,17 +121,12 @@ nav {
     font-weight: 700;
 }
 
-/* Footer */
 .footer {
     background-color: #f5f5f5;
     min-height: 100px;
     padding-top: 20px;
     margin-top: 20px;
 }
-
-/*=======================================
-3. COMMENTS PAGE
-=======================================*/
 
 .comment {
     display: flex;
@@ -207,7 +196,6 @@ nav {
     font-size: 13px;
 }
 
-/* Add Sub Comment */
 .sub-comments {
     margin-left: 80px;
     margin-top: 20px;
@@ -223,8 +211,6 @@ nav {
     margin-top: 10px;
 }
 
-/* Add Comment */
-
 .add-comment-container {
     margin-top: 30px;
 }
@@ -234,6 +220,6 @@ nav {
 }
 
 #map {
-    height: 400px;  /* The height is 400 pixels */
-    width: 100%;  /* The width is the width of the web page */
-   }
+    height: 400px;
+    width: 100%;
+}
